--- a/01.print/1.print_problem.md
+++ b/01.print/1.print_problem.md
@@ -1,44 +1,43 @@
-1.write a program that print the following line
+1.write a program that print the following line<br/>
 
-Mofis says to Bilkis, I really like you. 
-Bilkis replies with obvious disinterest, “Get away from me.
-Mofis’s heart starts pounding. He stutters, Why?
-Bilkis looks at Mofis and says, Because I’m in love with Shamsu!
+Mofis says to Bilkis, I really like you.<br/> 
+Bilkis replies with obvious disinterest, “Get away from me.<br/>
+Mofis’s heart starts pounding. He stutters, Why?<br/>
+Bilkis looks at Mofis and says, Because I’m in love with Shamsu!<br/>
 
-    [solution](Problem solve\01.print\01_print_solve.cpp)
+   [solution](https://github.com/Nakib00/problem_of_c--_course/blob/main/01.print/01_print_solve.cpp)
+<br/><br/>
 
+2.write a program that print the following line<br/>
 
-2.write a program that print the following line
+Find Size of fundamental data types :<br/>
+------------------------------------------<br/>
+The sizeof(char) is : 1 bytes<br/>
+The sizeof(short) is : 2 bytes<br/>
+The sizeof(int) is : 4 bytes<br/>
+The sizeof(long) is : 8 bytes<br/>
+The sizeof(long long) is : 8 bytes<br/>
+The sizeof(float) is : 4 bytes<br/>
+The sizeof(double) is : 8 bytes<br/>
+The sizeof(long double) is : 16 bytes<br/>
+The sizeof(bool) is : 1 bytes<br/>
 
-Find Size of fundamental data types :
-------------------------------------------
-The sizeof(char) is : 1 bytes
-The sizeof(short) is : 2 bytes
-The sizeof(int) is : 4 bytes
-The sizeof(long) is : 8 bytes
-The sizeof(long long) is : 8 bytes
-The sizeof(float) is : 4 bytes
-The sizeof(double) is : 8 bytes
-The sizeof(long double) is : 16 bytes
-The sizeof(bool) is : 1 bytes
+   [solution](https://github.com/Nakib00/problem_of_c--_course/blob/main/01.print/02_print_solve.cpp)
+<br/><br/>
 
-    [solution](Problem solve\01.print\02_print_solve.cpp)
-
-
-3.write a program that print the following line
-
-The Gender is : F
-Is she married? : 1
-Number of sons she has : 2
-Year of her appointment : 2009
-Salary for a year : 1500000
-Height is : 79.48
-GPA is 4.69
-Salary drawn upto : 12047235
-Balance till : 995324987
-
-    [solution](Problem solve\01.print\03_print_solve.cpp)
-
+3.write a program that print the following line<br/>
+<br/>
+The Gender is : F<br/>
+Is she married? : 1<br/>
+Number of sons she has : 2<br/>
+Year of her appointment : 2009<br/>
+Salary for a year : 1500000<br/>
+Height is : 79.48<br/>
+GPA is 4.69<br/>
+Salary drawn upto : 12047235<br/>
+Balance till : 995324987<br/>
+[Sloution](https://github.com/Nakib00/problem_of_c--_course/blob/main/01.print/03_print_solve.cpp)
+<br/>
 
 
 
