--- a/01.print/1.print_problem.md
+++ b/01.print/1.print_problem.md
@@ -35,7 +35,7 @@ Salary for a year : 1500000<br/>
 Height is : 79.48<br/>
 GPA is 4.69<br/>
 Salary drawn upto : 12047235<br/>
-Balance till : 995324987<br/>
+Balance till : 995324987<br/><br/>
 [Sloution](https://github.com/Nakib00/problem_of_c--_course/blob/main/01.print/03_print_solve.cpp)
 <br/>
 
